# splinter

./: .gitignore  Cargo.toml  README.md  bluetooth_client.html  build.rs  dummy.py
.cargo/: config.toml
.github/workflows/: rust_ci.yml
frontend/: index.html  package.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: deserialization.ts  index.ts  network.ts  parsing.ts  serialization.ts  types.ts
frontend/src/lib/components/: BotControls.svelte  BotSettingsInputs.svelte  BotStateChart.svelte  CommandQueue.svelte  ConnectionCard.svelte  OrientationChart.svelte  Settings.svelte  index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
src/: command.rs  config.rs  main.rs  message.rs  resources.rs  state.rs
src/tasks/: bluetooth.rs  display.rs  gyro.rs  mod.rs  motor.rs  net.rs  network.rs  orchestrator.rs  rotary.rs  rotary_encoder.rs  ultrasonic.rs  wifi.rs
