[package]
edition = "2021"
name = "splinter"
version = "0.1.0"

[[bin]]
name = "splinter"
path = "./src/main.rs"

[dependencies]
anyhow = { version = "1.0", default-features = false }
trouble-host = { git = "https://github.com/lucasalexsorensen/trouble.git", rev = "0567b73", optional = true, features = [
  "derive",
] }
esp-wifi-ble-only = { package = "esp-wifi", version = "0.14.1", features = [
  "esp32",
  "ble",
], optional = true }
critical-section = "1.2.0"
defmt = "0.3.10"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-graphics = "0.8.1"
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-backtrace = { version = "0.16.0", features = [
  "defmt",
  "esp32",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.1", features = [
  "defmt",
  "esp32",
  "unstable",
] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32"] }
esp-println = { version = "0.14.0", features = [
  "defmt-espflash",
  "esp32",
  "log-04",
] }
hcsr04_async = "0.4.0"
heapless = "0.8.0"
libm = "0.2.15"
mpu6050-dmp = { version = "0.6.0", features = ["async"] }
rotary-encoder-hal = "0.6.0"
ssd1306 = { version = "0.10.0", features = ["async"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
bt-hci = "=0.3.1"

[features]
default = ["bluetooth"]
bluetooth = ["dep:trouble-host", "dep:esp-wifi-ble-only"]


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
